<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:divider="@android:drawable/divider_horizontal_textfield"
    android:showDividers="middle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/doctorEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/doctor"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="number"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/hourEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hour"
        android:inputType="number"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/detailsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/details"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/statusEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/status"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints="" />

    <Button
            android:text="@string/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/sendButton"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/button4"/>


    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:visibility="invisible"/>

</LinearLayout>