<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"

        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:padding="3dp"
        card_view:cardElevation="2dp"
        card_view:cardMaxElevation="2dp"
        card_view:cardBackgroundColor="@color/pink_900"
        card_view:cardCornerRadius="5dp"
        card_view:contentPadding="5dp"
>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

        <LinearLayout android:layout_width="270dp"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <LinearLayout
                    android:id="@+id/idBooking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/idViewEmployee"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/id"
                        android:textColor="@android:color/white"/>
                <TextView
                        android:id="@+id/nameViewEmployee"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/name"
                        android:textColor="@android:color/white"/>
                <TextView
                    android:id="@+id/doctorViewEmployee"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/doctor"
                    android:textColor="@android:color/white"/>
            </LinearLayout>


            <LinearLayout
                    android:id="@+id/typeBooking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/dateViewEmployee"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/date"
                        android:textColor="@android:color/white"/>
                <TextView
                    android:id="@+id/hourViewEmployee"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/hour"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/confirmButton"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginEnd="24dp"
                card_view:drawableStartCompat="@android:drawable/ic_menu_edit" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>